# PD7_HW_30

./: pyproject.toml
ads/: models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selection.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: ad.csv  ads.json  csv_to_json.py  user.json
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_locations_user_location.py
